--- a/src/Components/Rawpost/Rawpost.css
+++ b/src/Components/Rawpost/Rawpost.css
@@ -13,6 +13,12 @@
     margin-right: 10px;
 }
 
+.smallposter{
+    max-height: 150px;
+    margin-right: 10px;
+  
+}
+
 .posters::-webkit-scrollbar{
     display: none;
 }
