style popup added

--- a/src/Components/Rawpost/Rawpost.css
+++ b/src/Components/Rawpost/Rawpost.css
@@ -9,11 +9,13 @@
     overflow-y: hidden;
 }
 .poster{
+    cursor: pointer;
     max-height: 250px;
     margin-right: 10px;
 }
 
 .smallposter{
+    cursor: pointer;
     max-height: 150px;
     margin-right: 10px;
   
@@ -21,4 +23,8 @@
 
 .posters::-webkit-scrollbar{
     display: none;
+}
+
+.poster:hover{
+    transform: scale(1.1);
 }
